fixed responsiveness issue with title being cropped on mobile

--- a/styles/sass/_responsiveness.scss
+++ b/styles/sass/_responsiveness.scss
@@ -62,7 +62,7 @@
 @media (max-width: 560px) {
 
     .mainAll {
-        margin-top: -20px;
+        margin-top: 20px;
         width: 70%;
     }
 
