--- a/styles/style.css
+++ b/styles/style.css
@@ -758,7 +758,7 @@ main {
 
 @media (max-width: 560px) {
   .mainAll {
-    margin-top: -20px;
+    margin-top: 20px;
     width: 70%;
   }
   .checkboxContainer {
